fix:alignmnet

--- a/src/app/learner/pages/coursedetails/coursedetails.component.scss
+++ b/src/app/learner/pages/coursedetails/coursedetails.component.scss
@@ -1530,7 +1530,7 @@ border-right: none !important;
 }
 
 .drawerOpnResource {
-    margin-left: 2%;
+    margin-left: 3%;
     width: 74%;
 }
 .drawerClsResource {
